--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Document</title>
+    <style>
+        .box {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          height: 400px;
+          background-image: url('{% static "img/ghostpost.jpg" %}')
+          
+        }
+        .content {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+        h1 {
+            background: #fff;
+            border: 2px solid #000;
+            border-radius: 5px;
+            padding: 5px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+        .light-btn {
+            border: 2px solid #000;
+            padding: 5px;
+            width: 80px;
+            background-color: #fff;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            transition-duration: 0.4s;
+        }
+        .dark-btn {
+            border: none;
+            padding: 7px;
+            width: 80px;
+            background-color: #000;
+            color: #fff;
+            border-radius: 5px;
+            transition-duration: 0.4s;
+            text-decoration: none;
+        }
+        .btn1:hover {
+            background-color: #000;
+            color: #fff;
+        }
+        .btn2:hover {
+            background-color: #fff;
+            color: #000;
+        }
+    </style>
 </head>
 <body>
-    <h1>GhostPost Machine API</h1>
-    <button><a href="/api">API</a></button>
-    <button><a href="/admin">ADMIN</a></button>
+<div class="container-fluid p-3 my-3 border box text-center">
+    <div class="content">
+        <h1>GhostPost Machine API</h1>
+        <a href="/api"><button type="button" class="light-btn btn1">API</button></a>
+        {% comment %} <button type="button" class="btn btn-outline-dark"><a href="/api">API</a></button> {% endcomment %}
+        <a href="/admin"><button type="button" class="dark-btn btn2">ADMIN</button></a>
+    </div>
+</div>
 </body>
 </html>
